html image setup

--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--Slideshow Container-->
+    <main class="picture-container">
+
+        <!--each image, text number, and caption text-->
+            <section class="slide" id="image1">
+                <div class="numbertext">1 / 4</div>
+                <img src="images/250.jpg" alt="#">
+            </section>
+            <section class="slide" id="image2">
+                <div class="numbertext">2 / 4</div>
+                <img src="images/287.jpg" alt="#">
+            </section>
+            <section class="slide" id="image3">
+                <div class="numbertext">3 / 4</div>
+                <img src="images/placeholder5.jpg" alt="#">
+            </section>
+            <section class="slide" id="image4">
+                <div class="numbertext">4 / 4</div>
+                <img src="images/placeholder8.jpg" alt="#">
+            </section>
+
+            <!--Next and previous buttons-->
+            <a href="" class="prev">&#10094;</a> <!--that code number is just built into html-->
+            <a href="" class="next">&#10095;</a>
+        </main>
 </body>
     <script src="main.js"></script>
 </html>
